--- a/src/app/components/forms/send-coins/send-coins.component.html
+++ b/src/app/components/forms/send-coins/send-coins.component.html
@@ -98,7 +98,7 @@
     [modal]="true" appendTo="body">
     <p-header>
         <i class="icon csc-dialog-icon icon-chip"></i>
-        Send CasinoCoins
+        Send brts
     </p-header>
     <div class="ui-g ui-fluid">
         <div class="ui-g-1"></div>
