--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <mat-sidenav-container class="home-sidenav-container">
             <mat-sidenav mode="side" opened="true" disableClose="true">
                 <div class="app-nav">
-                    <img src="../../../assets/brand/casinocoin-logo.png" alt="CasinoCoin" class="csc-logo"/>
+                    <img src="../../../assets/brand/brt-logo.png" alt="brt" class="csc-logo"/>
                     <div class="ui-g menu-balance">
                         <div class="ui-g-12 menu-text amount-label">Balance:</div>
                         <div class="ui-g-12 amount-value"> {{walletBalance | cscAmount : true : true}}</div>
