--- a/src/app/components/forms/paperwallet/paperwallet.component.scss
+++ b/src/app/components/forms/paperwallet/paperwallet.component.scss
@@ -5,7 +5,7 @@
 }
 
 ::ng-deep .footer-error {
-    color: $casinocoinRed;
+    color: $brtRed;
     font-weight: bolder;
 }
 
@@ -150,7 +150,7 @@ button:not(.offline) {
 	float: left;
 	text-align: center;
 	border: 1px solid black;
-	background-color: $casinocoinGray;
+	background-color: $brtGray;
     margin: 2% 0 0 0;
 }
 .key_box1{
@@ -159,7 +159,7 @@ button:not(.offline) {
 	float: left;
 	text-align: center;
 	border: 1px solid black;
-	background-color: $casinocoinGray;
+	background-color: $brtGray;
     margin: 2% 0 0 0;
 }
 
