--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -21,7 +21,7 @@ $base-height: 60px;
   font-weight: 300;
   font-size: 0.90em;
   height: $statusBarHeight;
-  background: $casinocoinBlack;
+  background: $brtBlack;
 }
 
 ::ng-deep p-toolbar .ui-toolbar-group-left {
@@ -52,7 +52,7 @@ $base-height: 60px;
 
 .btn.focus, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 2px $casinocoinRedLighter;
+  box-shadow: 0 0 0 2px $brtRedLighter;
 }
 
 .btn {
@@ -77,11 +77,11 @@ $base-height: 60px;
 }
 
 .connected-color {
-  color: $casinocoinGreen;
+  color: $brtGreen;
 }
 
 .disconnected-color {
-  color: $casinocoinRed;
+  color: $brtRed;
 }
 
 .amount-label {
@@ -103,7 +103,7 @@ $base-height: 60px;
 .app-nav {
   width: 240px;
   height: 100%;
-  background: $casinocoinRed;
+  background: $brtRed;
   background-image: url('../../../assets/brand/navbar-bg.jpg');
   background-repeat: no-repeat;
   background-position: bottom;
@@ -135,7 +135,7 @@ $base-height: 60px;
 
 /*
 .menu-nav mat-list-item:hover {
-  background-color: $casinocoinRedDarker;
+  background-color: $brtRedDarker;
   background-repeat: no-repeat;
   background-position: right;
   position: sticky;
@@ -186,18 +186,18 @@ $base-height: 60px;
 }
 
 ::ng-deep .footer-error {
-  color: $casinocoinRed;
+  color: $brtRed;
   font-weight: bolder;
 }
 
 ::ng-deep .mat-list-address-item {
-  color: $casinocoinRed !important;
+  color: $brtRed !important;
   font-size: smaller;
 }
 
 ::ng-deep .mat-list-address {
   flex-grow: 1;
-  border: 1px solid $casinocoinRed;
+  border: 1px solid $brtRed;
   overflow: auto;
   height: 90px;
 }
@@ -207,21 +207,21 @@ $base-height: 60px;
 }
 
 ::ng-deep .ui-button.sign-button {
-  background-color: $casinocoinGreen;
-  border-color: $casinocoinGreen; 
+  background-color: $brtGreen;
+  border-color: $brtGreen; 
 }
 
 ::ng-deep .ui-button:focus.sign-button, .ui-button:enabled:hover.sign-button {
-  background-color: $casinocoinGreenLighter;
-  border-color: $casinocoinGreenLighter; 
+  background-color: $brtGreenLighter;
+  border-color: $brtGreenLighter; 
 }
 
 ::ng-deep .verify-true {
-  color: $casinocoinGreen;
+  color: $brtGreen;
   font-size: 150%;
 }
 
 ::ng-deep .verify-false {
-  color: $casinocoinRed;
+  color: $brtRed;
   font-size: 150%;
 }
