--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -4,13 +4,13 @@ $borderRadius: 2px;
 $disabledOpacity: 0.35;
 $statusBarHeight: 40px;
 
-$casinocoinRed: #bf0a0a;
-$casinocoinRedLighter: lighten($casinocoinRed, 10%);
-$casinocoinRedDarker: darken($casinocoinRed, 10%);
-$casinocoinGreen: #4caf50;
-$casinocoinGreenLighter: lighten($casinocoinGreen, 10%);
-$casinocoinGreenDarker: darken($casinocoinGreen, 10%);
-$casinocoinBlue: #114490;
-$casinocoinGray: #f2f2f2;
-$casinocoinOrange: #da860a;
-$casinocoinBlack: #0f0f0f;
+$brtRed: #bf0a0a;
+$brtRedLighter: lighten($brtRed, 10%);
+$brtRedDarker: darken($brtRed, 10%);
+$brtGreen: #4caf50;
+$brtGreenLighter: lighten($brtGreen, 10%);
+$brtGreenDarker: darken($brtGreen, 10%);
+$brtBlue: #114490;
+$brtGray: #f2f2f2;
+$brtOrange: #da860a;
+$brtBlack: #0f0f0f;
