--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ html, body {
 }
 
 .loader-color {
-  color: $casinocoinRed;
+  color: $brtRed;
 }
 
 .loader-text {
@@ -61,12 +61,12 @@ html, body {
   font-weight: bold;
   margin-bottom: 15px;
   padding-left: 10px;
-  color: $casinocoinRed;
+  color: $brtRed;
 }
 
 i.csc-dialog-icon {
   padding-right: 10px;
-  color: $casinocoinRed;
+  color: $brtRed;
   font-size: 1.25em;
 }
 
@@ -90,7 +90,7 @@ i.csc-dialog-icon {
 .form-text-header {
   font-size: 1.5em;
   font-weight: bold;
-  color: $casinocoinRed;
+  color: $brtRed;
 }
 
 :not(input):not(textarea),
