Rename csc -> brt CSC -> BRT casinocoin -> brt

--- a/src/app/components/forms/importpaperwallet/importpaperwallet.component.scss
+++ b/src/app/components/forms/importpaperwallet/importpaperwallet.component.scss
@@ -137,7 +137,7 @@ button:not(.offline) {
 // 	color: white;
 // }
 
-// .csc-logo{
+// .brt-logo{
 // 	width: 150px;
 // 	float: left;
 // 	position: relative;
