--- a/src/app/components/forms/paperwallet/paperwallet.component.html
+++ b/src/app/components/forms/paperwallet/paperwallet.component.html
@@ -1,5 +1,5 @@
 <div class="ui-widget ui-g form-container">
-    <!-- <img src="../../../../assets/brand/brt-logo.png" alt="brt" class="csc-logo" /> -->
+    <!-- <img src="../../../../assets/brand/brt-logo.png" alt="brt" class="brt-logo" /> -->
     <!-- <h1 align="center">Paper Wallet Generator</h1><br> -->
     <p class="form-text-header">Paper Wallet Generator</p>
     <p>A brt Paper Wallet is an offline mechanism for storing brt. The process involves printing the public and private keys onto paper.</p>
@@ -39,7 +39,7 @@
 </div>
 <p-dialog [(visible)]="showInstructions" [width]="1000" [height]="650" [closable]="true" 
     [modal]="true" appendTo="body">
-    <p-header><span><i class="icon csc-dialog-icon icon-chip"></i>Paper Wallet Instructions</span></p-header>
+    <p-header><span><i class="icon brt-dialog-icon icon-chip"></i>Paper Wallet Instructions</span></p-header>
     <div>
         <h2>Instructions</h2>
         <strong>Step 1. Generate New Address</strong><br>
