--- a/src/app/components/forms/paperwallet/paperwallet.component.scss
+++ b/src/app/components/forms/paperwallet/paperwallet.component.scss
@@ -138,7 +138,7 @@ button:not(.offline) {
 	transform: translateY(4px);
 }
 
-.csc-logo{
+.brt-logo{
 	width: 150px;
 	float: left;
 	position: relative;
