--- a/src/app/components/forms/send-coins/send-coins.component.html
+++ b/src/app/components/forms/send-coins/send-coins.component.html
@@ -97,7 +97,7 @@
 <p-dialog [(visible)]="showPasswordDialog" [width]="480" [height]="325" [closable]="true" 
     [modal]="true" appendTo="body">
     <p-header>
-        <i class="icon csc-dialog-icon icon-chip"></i>
+        <i class="icon brt-dialog-icon icon-chip"></i>
         Send brts
     </p-header>
     <div class="ui-g ui-fluid">
@@ -141,7 +141,7 @@
 <p-dialog [(visible)]="showPasswordDialogForMultisig" [width]="520" [height]="350" [closable]="true"
     [modal]="true" appendTo="body">
     <p-header>
-        <i class="icon csc-dialog-icon icon-chip"></i>
+        <i class="icon brt-dialog-icon icon-chip"></i>
         Generate Multisignature Transaction
     </p-header>
     <div class="ui-g ui-fluid">
@@ -180,7 +180,7 @@
 <p-dialog [(visible)]="showMultisignTxDialog" [width]="450" [height]="450" [closable]="true"
           [modal]="true" appendTo="body">
     <p-header>
-        <i class="icon csc-dialog-icon icon-chip"></i>
+        <i class="icon brt-dialog-icon icon-chip"></i>
       Multisignature Transaction
     </p-header>
 
@@ -203,7 +203,7 @@
 <p-dialog [(visible)]="showAddressSearchDialog" [width]="480" [height]="220" [closable]="true"
           [modal]="true" appendTo="body">
     <p-header>
-        <i class="icon csc-dialog-icon icon-chip"></i>
+        <i class="icon brt-dialog-icon icon-chip"></i>
         Address book
     </p-header>
 
