--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -109,7 +109,7 @@ $base-height: 60px;
   background-position: bottom;
 }
 
-.csc-logo {
+.brt-logo {
   width: 220px;
   padding: 25px;
   text-align: center;
