--- a/src/app/components/wallet-setup/wallet-setup.component.html
+++ b/src/app/components/wallet-setup/wallet-setup.component.html
@@ -1,6 +1,6 @@
 <p-dialog [visible]="dialog_visible" [width]="600" [height]="400" [(closable)]="dialog_closeable" [modal]="true" (onHide)="onHideSetup()">
     <p-header>
-        <i class="icon csc-dialog-icon icon-chip"></i>
+        <i class="icon brt-dialog-icon icon-chip"></i>
         brt Wallet Setup
     </p-header>
     <div class="ui-g" style="max-height: 275px; min-height: 275px;">
