--- a/src/app/components/wallet-setup/step1-component.html
+++ b/src/app/components/wallet-setup/step1-component.html
@@ -3,7 +3,7 @@
     <div class="ui-g">
         <div class="ui-g-1"></div>
         <div class="ui-g-10">
-            <h3 style="text-align: center;">Welcome to the CSC wallet setup</h3>
+            <h3 style="text-align: center;">Welcome to the BRT wallet setup</h3>
         </div>
         <div class="ui-g-1"></div>
         <div class="ui-g-1"></div>
