Adjust some colors in config

--- a/src/app/components/forms/changepassword/changepassword.component.html
+++ b/src/app/components/forms/changepassword/changepassword.component.html
@@ -5,25 +5,25 @@
       <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 50px;"><i class="icon icon-key"></i></span>
           <input type="password" pInputText placeholder="Current Wallet Password" [(ngModel)]="currentWalletPassword" (keyup.enter)="doNext()"
-                #currentPassword>         
+                #currentPassword>
       </div>
   </div>
 
   <div *ngIf="showNewPassword" class="ui-g-12">
     <h3 style="text-align: center;">Set Password</h3>
     <div class="ui-inputgroup">
-        <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 50px;"><i class="icon icon-key"></i></span>              
-        <input type="password" pPassword [(ngModel)]="newWalletPassword" (ngModelChange)="checkPasswordUpdate($event)" 
-                   title="Password must be minmal 8 characters long including letter and numeric characters" 
+        <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 50px;"><i class="icon icon-key"></i></span>
+        <input type="password" pPassword [(ngModel)]="newWalletPassword" (ngModelChange)="checkPasswordUpdate($event)"
+                   title="Password must be minmal 8 characters long including letter and numeric characters"
                    required [(pattern)]="passwordPattern" placeholder="Wallet Password" #passwordInput/>
     </div>
   </div>
   <div *ngIf="showNewPassword" class="ui-g-12">
       <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 50px;"><i class="icon icon-key"></i></span>
-          <input type="password" pPassword [(ngModel)]="newWalletPasswordConfirmed" (ngModelChange)="checkPasswordConfirmedUpdate($event)" 
+          <input type="password" pPassword [(ngModel)]="newWalletPasswordConfirmed" (ngModelChange)="checkPasswordConfirmedUpdate($event)"
                 required [(pattern)]="passwordPattern" placeholder="Password Confirmation"
-                [disabled]="!paswordConfirmationEnabled" #passwordInputConfirmed/>     
+                [disabled]="!paswordConfirmationEnabled" #passwordInputConfirmed/>
       </div>
   </div>
 
@@ -32,7 +32,7 @@
     <div class="ui-g ui-fluid">
         <div class="ui-g-1"></div>
         <div class="ui-g-10">
-            In case you lose your wallet password, it can be recovered using the Recovery Passphrase. Please write down 
+            In case you lose your wallet password, it can be recovered using the Recovery Passphrase. Please write down
             the shown words in the exact order as they appear on a piece of paper or otherwise and keep it safe. <br/>
         </div>
         <div class="ui-g-1"></div>
@@ -48,7 +48,7 @@
         <div class="ui-g-1"></div>
         <div class="ui-g-10">
             <small style="font-weight: bolder;">
-            <p-checkbox (onChange)="onRecoveryAcceptChanged($event)" 
+            <p-checkbox (onChange)="onRecoveryAcceptChanged($event)"
                         label="I have saved the password recovery passphrase or understand the consequences of not doing so."></p-checkbox>
             </small>
         </div>
@@ -65,6 +65,6 @@
   </div>
 
   <div *ngIf="showError" style="padding-top: 15%;">
-      <h4 style="color: #bf0a0a;"> {{errorMessage}} </h4>
+      <h4 style="color: #2a454e;"> {{errorMessage}} </h4>
   </div>
 </div>
