--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -4,13 +4,13 @@ $borderRadius: 2px;
 $disabledOpacity: 0.35;
 $statusBarHeight: 40px;
 
-$brtRed: #bf0a0a;
-$brtRedLighter: lighten($brtRed, 10%);
-$brtRedDarker: darken($brtRed, 10%);
-$brtGreen: #4caf50;
-$brtGreenLighter: lighten($brtGreen, 10%);
-$brtGreenDarker: darken($brtGreen, 10%);
+$bgColor: #2a454e;
+$bgColorLighter: lighten($bgColor, 10%);
+$bgColorDarker: darken($bgColor, 10%);
+$brandColor: #00a88f;
+$brandColorLighter: lighten($brandColor, 10%);
+$brandColorDarker: darken($brandColor, 10%);
 $brtBlue: #114490;
 $brtGray: #f2f2f2;
 $brtOrange: #da860a;
-$brtBlack: #0f0f0f;
+$brtBlack: #2a454e;
