--- a/src/app/components/forms/overview/overview.component.scss
+++ b/src/app/components/forms/overview/overview.component.scss
@@ -1,7 +1,7 @@
 @import "src/assets/variables";
 
 ::ng-deep .ui-widget-header {
-    color: $brtRed;
+    color: $bgColor;
     font-weight: bolder;
 }
 
@@ -24,11 +24,11 @@
 }
 
 .tx_type_color_red {
-    background-color: $brtRed;
+    background-color: $bgColor;
 }
 
 .tx_type_color_green {
-    background-color: $brtGreen;
+    background-color: $brandColor;
 }
 
 .panel-group-height {
@@ -36,9 +36,9 @@
 }
 
 ::ng-deep .color_red {
-    color: $brtRed;
+    color: $bgColor;
 }
 
 ::ng-deep .color_green {
-    color: $brtGreen;
+    color: $brandColor;
 }
