--- a/src/app/components/forms/paperwallet/paperwallet.component.scss
+++ b/src/app/components/forms/paperwallet/paperwallet.component.scss
@@ -5,43 +5,43 @@
 }
 
 ::ng-deep .footer-error {
-    color: $brtRed;
+    color: $bgColor;
     font-weight: bolder;
 }
 
-.hidden { 
-	visibility: hidden; 
+.hidden {
+	visibility: hidden;
 }
-.displaynone { 
-	display: none !important; 
-}
-
-#mysecret[disabled] { 
-	border: none; 
+.displaynone {
+	display: none !important;
 }
 
-#myaddress:empty:before { 
-	content: ""; 
+#mysecret[disabled] {
+	border: none;
 }
 
-table:empty { 
-	display: none; 
+#myaddress:empty:before {
+	content: "";
 }
 
-td.centered { 
-	text-align: center; 
+table:empty {
+	display: none;
 }
 
-input[type="text"] { 
-	width: 240px; 
+td.centered {
+	text-align: center;
 }
 
-input[type="text"].wide { 
-	width: 280px; 
+input[type="text"] {
+	width: 240px;
 }
 
-input[type="text"].narrow { 
-	width: 120px; 
+input[type="text"].wide {
+	width: 280px;
+}
+
+input[type="text"].narrow {
+	width: 120px;
 }
 
 button:not(.offline) {
@@ -49,24 +49,24 @@ button:not(.offline) {
 	font-weight: bold;
 }
 
-.editflagbutton { 
-	width: 60px; 
+.editflagbutton {
+	width: 60px;
 }
 
-#sendbutton, .complexsendbutton, .cancelbutton { 
-	width: 72px; 
+#sendbutton, .complexsendbutton, .cancelbutton {
+	width: 72px;
 }
 
-#trustbutton { 
-	width: 84px; 
+#trustbutton {
+	width: 84px;
 }
 
-#startpathfindingbutton, #rekeybutton { 
-	width: 100px; 
+#startpathfindingbutton, #rekeybutton {
+	width: 100px;
 }
 
-.tilde { 
-	width: 30px; 
+.tilde {
+	width: 30px;
 }
 
 .halfoffset {
@@ -74,8 +74,8 @@ button:not(.offline) {
 	top: 9px;
 }
 
-.pathsJSON div { 
-	display: none; 
+.pathsJSON div {
+	display: none;
 }
 
 .pathsJSON:hover div {
@@ -102,7 +102,7 @@ button:not(.offline) {
   background-image: url('../../../../assets/bgpaperwallet.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center; 
+  background-position: center;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -129,9 +129,9 @@ button:not(.offline) {
 	border-radius: 15px;
 	box-shadow: 0 5px #999;
 }
-  
+
 .button-css:hover {background-color: #ffbbbb}
-  
+
 .button-css:active {
 	background-color: #d15d5d;
 	box-shadow: 0 3px #666;
