--- a/src/app/components/forms/receive-coins/receive-coins.component.scss
+++ b/src/app/components/forms/receive-coins/receive-coins.component.scss
@@ -17,12 +17,12 @@
 }
 
 ::ng-deep .footer-error {
-    color: $brtRed;
+    color: $bgColor;
     font-weight: bolder;
 }
 
 ::ng-deep .qrcode {
-    width: 100%; 
+    width: 100%;
     padding: 5px;
     text-align: center;
 }
