--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ html, body {
 }
 
 .loader-color {
-  color: $brtRed;
+  color: $bgColor;
 }
 
 .loader-text {
@@ -61,18 +61,18 @@ html, body {
   font-weight: bold;
   margin-bottom: 15px;
   padding-left: 10px;
-  color: $brtRed;
+  color: $bgColor;
 }
 
 i.brt-dialog-icon {
   padding-right: 10px;
-  color: $brtRed;
+  color: $bgColor;
   font-size: 1.25em;
 }
 
-.form-container { 
-	display:table; 
-	width:100%; 
+.form-container {
+	display:table;
+	width:100%;
   height: calc(100% - #{$statusBarHeight});
   padding-top: 25px;
   padding-bottom: 5px;
@@ -90,7 +90,7 @@ i.brt-dialog-icon {
 .form-text-header {
   font-size: 1.5em;
   font-weight: bold;
-  color: $brtRed;
+  color: $bgColor;
 }
 
 :not(input):not(textarea),
