--- a/src/assets/primeng-brt/theme.scss
+++ b/src/assets/primeng-brt/theme.scss
@@ -555,7 +555,7 @@ $inputGroupTextColor: #222222;
                 }
 
                 &.ui-state-active {
-                    background-color: $bgColor;
+                    background-color: $brandColor;
                     color: #ffffff;
                 }
             }
