--- a/src/assets/primeng-brt/theme.scss
+++ b/src/assets/primeng-brt/theme.scss
@@ -188,8 +188,8 @@ $inputGroupTextColor: #222222;
 
 /* Progressbar */
 .ui-progressbar .ui-progressbar-value {
-	 border: 1px solid #3f94e9;
-     background: #8ec5fc;
+	 border: 1px solid $brandColorDarker;
+     background: $brandColorLighter;
 }
 
 .ui-progressbar .ui-progressbar-label {
@@ -220,6 +220,7 @@ $inputGroupTextColor: #222222;
 .ui-widget-content .ui-button,
 .ui-widget.ui-button,
 .ui-button {
+  cursor: pointer;
 	border: 1px solid $brandColor;
 	color: #FFFFFF;
 	background: $brandColor;
